--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resume Siddhi Singh</title>
     <link rel="stylesheet" href="style.css">
+    <meta name="keywords" content="siddhi singh , siddhi singh's resume. siddhi singh prifile, resume website">
+    <meta name="description" content="the resume of cs siddhi singh hope you will find it tnteresting">
+    <meta name="viewport" content="width=device-width initial-scale 1">
 </head>
 <body>
     <table><tr>
