--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="siddhi singh , siddhi singh's resume. siddhi singh prifile, resume website">
     <meta name="description" content="the resume of cs siddhi singh hope you will find it tnteresting">
     <meta name="viewport" content="width=device-width initial-scale 1">
+    <link rel="icon" href="icon.jpg">
 </head>
 <body>
     <table><tr>
