--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Resume Siddhi Singh</title>
     <link rel="stylesheet" href="style.css">
     <meta name="keywords" content="siddhi singh , siddhi singh's resume, siddhi singh prifile, resume website, cs singh siddhi proffesional profile, cs siddhi singh, cs siddhi , cs resume">
-    <meta name="description" content="the resume of cs siddhi singh hope you will find it tnteresting">
+    <meta name="description" content="My self Siddhi Singh a CS proffesional and B.com graduate having interest in law">
     <meta name="viewport" content="width=device-width initial-scale 1">
     <link rel="icon" href="icon.jpg">
 </head>
