--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resume Siddhi Singh</title>
     <link rel="stylesheet" href="style.css">
-    <meta name="keywords" content="siddhi singh , siddhi singh's resume, siddhi singh prifile, resume website, cs singh siddhi proffesional profile, cs siddhi singh, cs siddhi , cs resume">
-    <meta name="description" content="My self Siddhi Singh a CS proffesional and B.com graduate having interest in law">
-<!--     <meta name="viewport"  initial-scale 1"> -->
+    <meta name="keywords" content="siddhi singh , siddhi singh's resume. siddhi singh prifile, resume website">
+    <meta name="description" content="the resume of cs siddhi singh hope you will find it tnteresting">
+    <meta name="viewport" content="width=device-width initial-scale 1">
     <link rel="icon" href="icon.jpg">
 </head>
 <body>
+    <header >
     <table><tr>
         <td><p style="color:crimson">
             Name:- Siddhi Singh
@@ -34,6 +35,7 @@
         <td><img src="img.jpg" alt="my picture" id="picture"></td>
     </tr>
 </table>
+</header>
     
     
     <div>
@@ -83,16 +85,16 @@
             <tr>
                 <td rowspan="3">CS Professional</td>
                 <td>Group I</td>
-                <td>Appeared in June-2023</td>
+                <td>Appeared in june-2023</td>
                 <td rowspan="3">Pursuing</td>
             </tr>
             <tr>
                 <td>Group II</td>
-                <td>Appeared in June-2023</td>
+                <td>Appeared in june-2023</td>
             </tr>
             <tr>
                 <td>Group III </td>
-                <td>Appeared in June-2023</td>
+                <td>Appeared in june-2023</td>
             </tr>
             <tr>
                 <td rowspan="2">CS Executive</td>
